k8s/prod/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mymemomaster
  labels:
    app.kubernetes.io/name: mymemomaster
    app.kubernetes.io/instance: prod
